--- a/package.json
+++ b/package.json
@@ -7,7 +7,24 @@
     "dev": "yarn start",
     "build": "yarn build"
   },
-  "keywords": ["react","typescript","music"],
+  "keywords": [
+    "react",
+    "typescript",
+    "music"
+  ],
   "author": "Niko Zhang",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "awesome-typescript-loader": "^5.2.1",
+    "source-map-loader": "^1.0.0",
+    "typescript": "^3.9.6",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
+  }
 }
