--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "基于React配合TypeScript搭建的WEB APP",
   "main": "index.js",
   "scripts": {
-    "dev": "yarn start",
-    "build": "yarn build"
+    "dev:build": "webpack --env.development --config ./build/webpack.base.js",
+    "dev": "webpack-dev-server --env.development --config ./build/webpack.base.js",
+    "build": "webpack --env.production --config ./build/webpack.base.js",
+    "build:dll": "webpack --config ./build/webpack.dll.js"
   },
   "keywords": [
     "react",
@@ -21,10 +23,42 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
+    "@babel/runtime": "^7.9.2",
+    "@types/webpack-env": "^1.15.1",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.6.4",
+    "css-loader": "^3.4.2",
+    "dart-sass": "^1.25.0",
+    "file-loader": "^6.0.0",
+    "glob": "^7.1.6",
+    "happypack": "^5.0.1",
+    "html-webpack-plugin": "^4.0.4",
+    "image-webpack-loader": "^6.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "awesome-typescript-loader": "^5.2.1",
+    "postcss-loader": "^3.0.0",
+    "purgecss-webpack-plugin": "^2.3.0",
+    "sass": "^1.26.9",
+    "sass-loader": "^9.0.1",
     "source-map-loader": "^1.0.0",
+    "speed-measure-webpack-plugin": "^1.3.3",
+    "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^3.0.6",
     "typescript": "^3.9.6",
+    "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.2.2"
   }
 }
