--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "@babel/preset-typescript": "^7.9.0",
     "@babel/runtime": "^7.9.2",
     "@types/webpack-env": "^1.15.1",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.6.4",
     "css-loader": "^3.4.2",
     "dart-sass": "^1.25.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "file-loader": "^6.0.0",
     "glob": "^7.1.6",
     "happypack": "^5.0.1",
@@ -44,8 +46,8 @@
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "awesome-typescript-loader": "^5.2.1",
     "postcss-loader": "^3.0.0",
+    "prettier": "^2.0.5",
     "purgecss-webpack-plugin": "^2.3.0",
     "sass": "^1.26.9",
     "sass-loader": "^9.0.1",
