--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev:build": "webpack --env.development --config ./build/webpack.base.js",
     "dev": "webpack-dev-server --env.development --config ./build/webpack.base.js",
     "build": "webpack --env.production --config ./build/webpack.base.js",
-    "build:dll": "webpack --config ./build/webpack.dll.js"
+    "build:dll": "webpack --config ./build/webpack.dll.js",
+    "precommit": "lint-staged -q"
   },
   "keywords": [
     "react",
@@ -64,16 +65,5 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "**/*": [
-      "eslint --fix",
-      "prettier --write"
-    ]
   }
 }
