--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev:build": "webpack --env.development --config ./build/webpack.base.js",
     "dev": "webpack-dev-server --env.development --config ./build/webpack.base.js",
     "build": "webpack --env.production --config ./build/webpack.base.js",
-    "build:dll": "webpack --config ./build/webpack.dll.js",
-    "precommit": "lint-staged -q"
+    "build:dll": "webpack --config ./build/webpack.dll.js"
   },
   "keywords": [
     "react",
