--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "core-js": "^3.6.4",
     "css-loader": "^3.4.2",
     "dart-sass": "^1.25.0",
+    "eslint": "^7.9.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "file-loader": "^6.0.0",
     "glob": "^7.1.6",
@@ -47,7 +49,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.2",
     "purgecss-webpack-plugin": "^2.3.0",
     "sass": "^1.26.9",
     "sass-loader": "^9.0.1",
