--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-typescript": "^7.10.4",
     "@types/webpack-env": "^1.15.2",
     "autoprefixer": "^9.8.4",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.6.4",
@@ -40,6 +41,7 @@
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
     "file-loader": "^6.0.0",
     "glob": "^7.1.6",
     "happypack": "^5.0.1",
