--- a/package.json
+++ b/package.json
@@ -1,70 +1,76 @@
 {
-  "name": "react-typescript-music",
-  "version": "1.0.0",
-  "description": "基于React配合TypeScript搭建的WEB APP",
-  "main": "index.js",
-  "scripts": {
-    "dev:build": "webpack --env.development --config ./build/webpack.base.js",
-    "dev": "webpack-dev-server --env.development --config ./build/webpack.base.js",
-    "build": "webpack --env.production --config ./build/webpack.base.js",
-    "build:dll": "webpack --config ./build/webpack.dll.js",
-    "precommit": "lint-staged -q"
-  },
-  "keywords": [
-    "react",
-    "typescript",
-    "music"
-  ],
-  "author": "Niko Zhang",
-  "license": "ISC",
-  "dependencies": {
-    "@types/react": "^16.9.41",
-    "@types/react-dom": "^16.9.8",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.10.4",
-    "@babel/core": "^7.10.4",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
-    "@types/webpack-env": "^1.15.2",
-    "autoprefixer": "^9.8.4",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "core-js": "^3.6.4",
-    "css-loader": "^3.4.2",
-    "dart-sass": "^1.25.0",
-    "eslint": "^7.9.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.6",
-    "file-loader": "^6.0.0",
-    "glob": "^7.1.6",
-    "happypack": "^5.0.1",
-    "html-webpack-plugin": "^4.0.4",
-    "image-webpack-loader": "^6.0.0",
-    "lint-staged": "^10.2.11",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
-    "prettier": "^2.1.2",
-    "purgecss-webpack-plugin": "^2.3.0",
-    "sass": "^1.26.9",
-    "sass-loader": "^9.0.1",
-    "source-map-loader": "^1.0.0",
-    "speed-measure-webpack-plugin": "^1.3.3",
-    "style-loader": "^1.2.1",
-    "terser-webpack-plugin": "^3.0.6",
-    "typescript": "^3.9.6",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
-  }
+    "name": "react-typescript-music",
+    "version": "1.0.0",
+    "description": "基于React配合TypeScript搭建的WEB APP",
+    "main": "index.js",
+    "scripts": {
+        "dev:build": "webpack --env.development --config ./build/webpack.base.js",
+        "dev": "webpack-dev-server --env.development --config ./build/webpack.base.js",
+        "build": "webpack --env.production --config ./build/webpack.base.js",
+        "build:dll": "webpack --config ./build/webpack.dll.js",
+        "precommit": "lint-staged -q"
+    },
+    "keywords": [
+        "react",
+        "typescript",
+        "music"
+    ],
+    "author": "Niko Zhang",
+    "license": "ISC",
+    "dependencies": {
+        "@types/react": "^16.9.41",
+        "@types/react-dom": "^16.9.8",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.10.4",
+        "@babel/core": "^7.10.4",
+        "@babel/plugin-proposal-class-properties": "^7.10.4",
+        "@babel/preset-env": "^7.10.4",
+        "@babel/preset-react": "^7.10.4",
+        "@babel/preset-typescript": "^7.10.4",
+        "@types/webpack-env": "^1.15.2",
+        "@typescript-eslint/eslint-plugin": "^4.1.1",
+        "@typescript-eslint/parser": "^4.1.1",
+        "autoprefixer": "^9.8.4",
+        "babel-eslint": "^10.1.0",
+        "babel-loader": "^8.1.0",
+        "clean-webpack-plugin": "^3.0.0",
+        "core-js": "^3.6.4",
+        "css-loader": "^3.4.2",
+        "dart-sass": "^1.25.0",
+        "eslint": "^7.9.0",
+        "eslint-config-airbnb": "^18.2.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-jsx-a11y": "^6.3.1",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-react": "^7.20.6",
+        "eslint-plugin-react-hooks": "^4.1.2",
+        "file-loader": "^6.0.0",
+        "glob": "^7.1.6",
+        "happypack": "^5.0.1",
+        "html-webpack-plugin": "^4.0.4",
+        "image-webpack-loader": "^6.0.0",
+        "lint-staged": "^10.2.11",
+        "mini-css-extract-plugin": "^0.9.0",
+        "optimize-css-assets-webpack-plugin": "^5.0.3",
+        "postcss-loader": "^3.0.0",
+        "prettier": "^2.1.2",
+        "purgecss-webpack-plugin": "^2.3.0",
+        "sass": "^1.26.9",
+        "sass-loader": "^9.0.1",
+        "source-map-loader": "^1.0.0",
+        "speed-measure-webpack-plugin": "^1.3.3",
+        "style-loader": "^1.2.1",
+        "terser-webpack-plugin": "^3.0.6",
+        "typescript": "^3.9.6",
+        "url-loader": "^4.1.0",
+        "webpack": "^4.43.0",
+        "webpack-bundle-analyzer": "^3.8.0",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0",
+        "webpack-merge": "^4.2.2"
+    }
 }
