--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "lodash": "^4.17.21",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "style-components": "^0.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.4",
